--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html ng-app='gmailClone'>
 <head>
 	<title>Gmail clone</title>
+	<link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
 
@@ -10,6 +11,14 @@
 	<script src='js/lib/jquery-1.11.js'></script>
 	<script src='js/lib/angular-1.2.js'></script>
 	<script src='js/lib/angular-route-1.2.js'></script>
+	<script src='js/lib/angular-sanitize-1.2.js'></script>
+
 	<script src='js/app.js'></script>
+	<script src='js/factories/EmailFactory.js'></script>
+	<script src='js/factories/InboxFactory.js'></script>
+	<script src='js/controllers/EmailCtrl.js'></script>
+	<script src='js/controllers/InboxCtrl.js'></script>
+	<script src='js/directives/EmailDrctv.js'></script>
+	<script src='js/directives/InboxDrctv.js'></script>
 </body>
 </html>
