--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html ng-app='gmailClone'>
 <head>
 	<title>Gmail clone</title>
-	<link rel='stylesheet' href='css/style.css'>
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
