--- a/js/directives/inbox.tmpl.html
+++ b/js/directives/inbox.tmpl.html
@@ -18,7 +18,7 @@
         <p class="inbox__list-subject"> {{ message.subject }} </p>
       </div>
       <div class="inbox__list-actions">
-        <a href="#" ng-click="inbox.goToMessage(message.id);">
+        <a href="" ng-click="inbox.goToMessage(message.id);">
           Read
         </a>
         <a href="" ng-click="inbox.deleteMessage(id, $index);">
