--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+	<header class="header" role="banner">
+      <div class="header__text">
+        <p>Gmail clone</p>
+      </div>
+    </header>
 
-	<div ng-view></div>
+	<main class="main" role="main">
+      <div ng-view class="flex"></div>
+    </main>
 
 
 	<script src='js/lib/jquery-1.11.js'></script>
